--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
     "@types/react": "^18.2.53",
     "@types/react-dom": "^18.2.18",
     "antd": "^5.14.0",
+    "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-is": "^18.2.0",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
+    "react-spacer": "^1.3.0",
     "react-styled-spacer": "^1.2.0",
+    "semantic-ui-react": "^2.1.5",
+    "sweetalert2": "^11.10.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
