--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "5.0.1",
     "react-spacer": "^1.3.0",
     "react-styled-spacer": "^1.2.0",
+    "react-toggle-dark-mode": "^1.1.1",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.5",
     "sweetalert2": "^11.10.5",
